--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.8.1",
     "react-owl-carousel": "^2.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "redux": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
